--- a/view.html
+++ b/view.html
@@ -57,7 +57,7 @@
                         <div class="card-body">
 
                             <h2 id="name">Yoda</h2>
-                            
+
                             <div id="stats">
                                 <h3><strong>Role:</strong><span id="role">Jedi Master</span></h3>
                                 <h3><strong>Age:</strong><span id="age">900</span></h3>
@@ -72,6 +72,7 @@
 
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="view.js"></script>
     
 </body>
 
