--- a/view.html
+++ b/view.html
@@ -16,12 +16,12 @@
 
         <div class="jumbotron">
 
-            <h1>Blog for Hatchways</h1>
+            <h1>Authors Blog</h1>
 
             <hr>
 
-            <a href="/add"><button class="btn btn-danger btn-lg"><span class="fa fa-plus"></span>Add New Character</button></a>
-            <a href="/api/characters"><button class="btn btn-danger btn-lg"><span class="fa fa-eye"></span>All Characters</button></a>
+            <a href="/add"><button class="btn btn-danger btn-lg"><span class="fa fa-plus"></span>Add New Post</button></a>
+            <a href="/api/posts"><button class="btn btn-danger btn-lg"><span class="fa fa-eye"></span>All Posts</button></a>
 
         </div>
 
@@ -32,17 +32,17 @@
 
                     <div class="card mb-4">
                         <div class="card-header">
-                            <h3><strong>Character Search</strong></h3>
+                            <h3><strong>Post Search</strong></h3>
                         </div>
 
                         <div class="card-body">
 
-                            <input type="text" id="character-search" class="form-control">
+                            <input type="text" id="post-search" class="form-control">
 
                             <br>
 
                             <div class="text-right">
-                                <button type="submit" class="btn btn-primary btn-md" id="search-btn"><span class="fa fa-search"></span>Search your feelings.</button>
+                                <button type="submit" class="btn btn-primary btn-md" id="search-btn"><span class="fa fa-search"></span>Click Here</button>
                             </div>
 
                         </div>
@@ -51,16 +51,16 @@
                     <div class="card">
 
                         <div class="card-header">
-                            <h3><strong>Character Stats</strong></h3>
+                            <h3><strong>Author Info</strong></h3>
                         </div>
 
                         <div class="card-body">
 
-                            <h2 id="name">Yoda</h2>
+                            <h2 id="author">Tom</h2>
 
-                            <div id="stats">
-                                <h3><strong>Role:</strong><span id="role">Jedi Master</span></h3>
-                                <h3><strong>Age:</strong><span id="age">900</span></h3>
+                            <div id="info">
+                                <h3><strong>ID:</strong><span id="id">1</span></h3>
+                                <h3><strong>Likes:</strong><span id="likes">960</span></h3>
                                 
                             </div>
                         </div>
