saving before restarting for error 500

--- a/view.html
+++ b/view.html
@@ -74,7 +74,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <!-- <script type="text/javascript" src="view.js"></script> -->
 
-    <script>
+    <script text="type/javascript">
         $("#search-btn").on("click", function() {
     var searchedPost = $("#post-search").val().trim();
 
