--- a/add.html
+++ b/add.html
@@ -85,7 +85,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <!-- <script type="text/javascript" src="add.js"></script> -->
 
-    <script>
+    <script text="type/javascript">
         $("#add-btn").on("click", function(event) {
     event.preventDefault();
     var newPosts = {
@@ -98,7 +98,8 @@
         tags: $("#tags").val().trim()
     };
 
-    $.post("/api/posts", newPosts).then(function(data) {
+    $.post("/api/posts", newPosts)
+        .then(function(data) {
         console.log("add.html", data);
         alert("Adding post");
     });
